# windows-terminal-quake

./: .editorconfig  .gitignore  .globalconfig  .markdownlint.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  NOTES.md  README.md  TESTS.md  azure-pipelines.yml  build-docs.sh  build-lnx.sh  build-win.ps1  build-win.sh  build.cake  build.ps1  build.sh  docker-build.sh  global.json  mkdocs.yml  renovate.json  requirements.txt  stylecop.json  windows-terminal-quake.sln
docs/: 404.html  README.md  build.sh  index.html  mkdocs.yml  properdocs.yml  pyproject.toml  requirements.txt  run.sh  setup.py  sitemap.xml  wtqsettings.yml
docs/docs/: index.html  sitemap.xml
docs/docs/assets/: styles.css
docs/docs/search/: search_index.json
docs/docs/v1/: index.html
docs/getting-started/build-cake/: index.html
docs/getting-started/build-vs/: index.html
docs/getting-started/direct-download/: index.html
docs/getting-started/download-auto-updater/: index.html
docs/getting-started/download-binary/: index.html
docs/getting-started/get-from-scoop/: index.html
docs/getting-started/get-from-winget/: index.html
docs/misc/changelog/: index.html
docs/misc/reporting-issues/: index.html
docs/overrides/partials/: footer.html
docs/pages/: faq.md  gen.md  index.md  index.md.bak  index.tpl.md  reporting-issues.md  v1.md
docs/pages/assets/: styles.css
docs/pages/misc/: changelog.md  faq.md  reporting-issues.md
docs/pages/v1/: index.md
docs/pages/v2/: installation.md
docs/search/: search_index.json
docs/settings/hotkeys/: index.html
(+1003 files in other folders)
