[project]
name = "wtq-docs"
version = "1.0.0"
description = "Documentation for WTQ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel==2.17.0",
    "backrefs==5.9",
    "bracex==2.6",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.4",
    "click==8.2.1",
    "colorama==0.4.6",
    "ghp-import==2.1.0",
    "hjson==3.1.0",
    "idna==3.10",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-include-markdown-plugin==7.1.8",
    "mkdocs-macros-plugin==1.3.9",
    "mkdocs-material==9.7.3",
    "mkdocs-material-extensions==1.3.1",
    "packaging==25.0",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "platformdirs==4.9.2",
    "pygments==2.19.2",
    "pymdown-extensions==10.16.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "pyyaml-env-tag==1.1",
    "regex==2025.9.1",
    "requests==2.32.5",
    "six==1.17.0",
    "super-collections==0.5.3",
    "termcolor==3.1.0",
    "urllib3==2.6.3",
    "watchdog==6.0.0",
    "wcmatch==10.1",
    "zipp==3.23.0",
]